plugins {
	id 'java'
    id "info.solidsoft.pitest" version "1.19.0-rc.3"
}

group = 'nu.forsenad.todo'
version = '0.0.1-SNAPSHOT'
description = 'application'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
    testImplementation 'org.assertj:assertj-core:3.25.3'
    pitest "org.pitest:pitest-junit5-plugin:1.2.1"
}

pitest {
    outputFormats = ['HTML']
}

tasks.named('test') {
	useJUnitPlatform()
}
